@@ -225,3 +225,43 @@ class TestStapling:
         assert stat['ocsp'] == "successful (0x0)"
         mtime3 = os.path.getmtime( ocsp_file )
         assert mtime1 != mtime3
+
+    # MD, check that stapling renew window works. Set a large window
+    # that causes response to be retrieved all the time.
+    def test_801_006(self):
+        assert TestEnv.apache_stop() == 0
+        # turn stapling on, wait for it to appear in connections
+        md = TestStapling.mdA
+        TestStapling.configure_httpd(md, "MDStapling on").install()
+        assert TestEnv.apache_restart() == 0
+        stat = TestEnv.await_ocsp_status(md)
+        assert stat['ocsp'] == "successful (0x0)" 
+        assert stat['verify'] == "0 (ok)"
+        # fine the file where the ocsp response is stored
+        dir = os.path.join( TestEnv.STORE_DIR, 'ocsp', md )
+        files = os.listdir( dir )
+        ocsp_file = None
+        for name in files:
+            if name.startswith("ocsp-"):
+                ocsp_file = os.path.join(dir, name)
+        assert ocsp_file
+        mtime1 = os.path.getmtime( ocsp_file )
+        assert TestEnv.apache_restart() == 0
+        stat = TestEnv.await_ocsp_status(md)
+        assert stat['ocsp'] == "successful (0x0)" 
+        # wait a sec, restart and check that file does not change
+        time.sleep(1)
+        mtime2 = os.path.getmtime( ocsp_file )
+        assert mtime1 == mtime2
+        # configure a renew window of 10 days, restart, larger than any life time.
+        TestStapling.configure_httpd(md, """
+            MDStapling on
+            MDStaplingRenewWindow 10d
+            """).install()
+        assert TestEnv.apache_restart() == 0
+        stat = TestEnv.await_ocsp_status(md)
+        assert stat['ocsp'] == "successful (0x0)"
+        # wait a sec, restart and check that file does not change
+        time.sleep(1)
+        mtime3 = os.path.getmtime( ocsp_file )
+        assert mtime1 != mtime3
